--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
     "zod": "^3.23.8",
-    "firebase": "^10.12.3"  // Added Firebase dependency here
+    "firebase": "^10.12.3"  
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
